Fixing some spacing

--- a/end-ng/app/pages/login/login-common.css
+++ b/end-ng/app/pages/login/login-common.css
@@ -15,4 +15,6 @@ Button, TextField {
 }
 .btn-primary {
   background-color: #CB1D00;
+  margin-left: 0;
+  margin-right: 0;
 }
